<resources>
    <string name="app_name">Memória Política</string>

    <string name="drawer_header_title">Opções</string>
    <string name="action_sort">Ordenar</string>
    <string name="action_search_politician">Procure por políticos</string>
    <string name="search_hint">Buscar políticos e partidos</string>
    <string name="action_federal_deputies">Deputados federais</string>
    <string name="action_senators">Senadores</string>
    <string name="action_sort_by_state">Por estado</string>
    <string name="action_sort_by_party">Por partido</string>
    <string name="action_sort_by_name">Por nome</string>
    <string name="action_sort_by_approved_first">Aprovados primeiro</string>
    <string name="action_sort_by_neutral_first">Neutros primeiro</string>
    <string name="action_sort_by_reproved_first">Reprovados primeiro</string>
    <string name="search_query_hint">Procure por políticos, partidos, estados, etc</string>

</resources>
