<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".gui.MainActivity">

    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort_variant"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_by_state"
                    android:title="@string/action_sort_by_state"
                    android:onClick="onSortMenuItemSelected" />
                <item
                    android:id="@+id/action_sort_by_party"
                    android:title="@string/action_sort_by_party"
                    android:onClick="onSortMenuItemSelected"/>
                <item
                    android:id="@+id/action_sort_by_name"
                    android:title="@string/action_sort_by_name"
                    android:checked="true"
                    android:onClick="onSortMenuItemSelected"/>
                <item
                    android:id="@+id/action_sort_by_approved_first"
                    android:title="@string/action_sort_by_approved_first"
                    android:onClick="onSortMenuItemSelected"/>
                <item
                    android:id="@+id/action_sort_by_neutral_first"
                    android:title="@string/action_sort_by_neutral_first"
                    android:onClick="onSortMenuItemSelected"/>
                <item
                    android:id="@+id/action_sort_by_reproved_first"
                    android:title="@string/action_sort_by_reproved_first"
                    android:onClick="onSortMenuItemSelected"/>
            </group>
        </menu>
    </item>
</menu>